// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar test > Snapshot 1`] = `
.c0 {
  position: relative;
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  outline: none;
  margin: 0px;
  background-color: #FFFFFF;
  background-image: var(--background-image);
  background-size: cover;
  border-radius: 42%;
}

@supports (background:paint(smooth-corners)) {
  .c0 {
    padding: 0px;
    margin: 0px;
    background: paint(smooth-corners);
    border-radius: 0;
    box-shadow: none;
    border-image-source: var(--background-image);
    --smooth-corners: 42%;
    --smooth-corners-shadow: 0 0 0 0 transparent;
    --smooth-corners-bg-color: #FFFFFF;
    --smooth-corners-padding: 0;
    --smooth-corners-radius-unit: string;
  }
}

<div
  aria-label="Name"
  class="c0"
  data-testid="bezier-react-avatar"
  role="img"
  size="24"
  style="--background-image: url(https://www.google.com);"
/>
`;

exports[`Avatar test > should have right -2px, bottom -2px style on StatusWrapper 1`] = `
.c1 {
  box-sizing: border-box;
  border-color: #FFFFFF;
  border-style: solid solid solid solid;
  border-width: 2px;
  position: relative;
  box-sizing: content-box;
  width: 8px;
  height: 8px;
  background-color: #FFFFFF;
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 8px;
  height: 8px;
  content: '';
  background-color: #31A552;
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: -2px;
  bottom: -2px;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
  size="8"
>
  <div
    class="c1"
    color="bgtxt-green-normal"
    data-testid="bezier-react-status"
    size="8"
  />
</div>
`;

exports[`Avatar test > should have right 2px, bottom 2px style on StatusWrapper when show border 1`] = `
.c1 {
  box-sizing: border-box;
  border-color: #FFFFFF;
  border-style: solid solid solid solid;
  border-width: 2px;
  position: relative;
  box-sizing: content-box;
  width: 8px;
  height: 8px;
  background-color: #FFFFFF;
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 8px;
  height: 8px;
  content: '';
  background-color: #31A552;
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: 2px;
  bottom: 2px;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
  size="8"
>
  <div
    class="c1"
    color="bgtxt-green-normal"
    data-testid="bezier-react-status"
    size="8"
  />
</div>
`;

exports[`Avatar test > should have right 4px, bottom 4px style on StatusWrapper when size grater then 90 1`] = `
.c1 {
  box-sizing: border-box;
  border-color: #FFFFFF;
  border-style: solid solid solid solid;
  border-width: 3px;
  position: relative;
  box-sizing: content-box;
  width: 14px;
  height: 14px;
  background-color: #FFFFFF;
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 14px;
  height: 14px;
  content: '';
  background-color: #31A552;
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: 4px;
  bottom: 4px;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
  size="14"
>
  <div
    class="c1"
    color="bgtxt-green-normal"
    data-testid="bezier-react-status"
    size="14"
  />
</div>
`;

exports[`Avatar test > should have right 8px, bottom 8px style on StatusWrapper when size grater then 90 and show border 1`] = `
.c1 {
  box-sizing: border-box;
  border-color: #FFFFFF;
  border-style: solid solid solid solid;
  border-width: 3px;
  position: relative;
  box-sizing: content-box;
  width: 14px;
  height: 14px;
  background-color: #FFFFFF;
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 14px;
  height: 14px;
  content: '';
  background-color: #31A552;
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: 8px;
  bottom: 8px;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
  size="14"
>
  <div
    class="c1"
    color="bgtxt-green-normal"
    data-testid="bezier-react-status"
    size="14"
  />
</div>
`;
